# discord-movie-night-bot

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: default-user-story.md
discord_data/: Cargo.toml
external_data/: Cargo.toml
src/: behaviour.rs  command.rs  commands.rs  general_behaviour.rs  help_behaviour.rs  history_behaviour.rs  main.rs  movie_behaviour.rs  send_message.rs  serde_behaviour.rs  voting_behaviour.rs  watch_list_behaviour.rs
