[package]
name = "discord_movie_night"
version = "0.1.0"
authors = ["jan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
discord_data = { path = "discord_data" }