[package]
name = "discord_movie_night"
version = "0.1.0"
authors = ["jan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
external_data = { path = "external_data" }
chrono = "0.4.19"
itertools = "0.10.0"
tmdb = "3.0.0"
regex = "1.5"